# claude-pet

./: .gitignore  .mcp.json  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
docs/superpowers/plans/: 2026-04-09-claude-pet-implementation.md
docs/superpowers/specs/: 2026-04-09-claude-pet-design.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: pet.md
plugin/skills/companion/: SKILL.md
skills/pet-companion/: SKILL.md
src/claude_pet/: __init__.py  ascii_art.py  cli.py  designer.py  models.py  personality.py  server.py  terminal.py
tests/: test_ascii_art.py  test_integration.py  test_models.py  test_personality.py  test_server.py  test_terminal.py
